@@ -1,11 +1,0 @@
-prefix=@CMAKE_INSTALL_PREFIX@
-exec_prefix=@EXEC_PREFIX@
-libdir=@LIBDIR@
-includedir=@INCLUDEDIR@
-
-Name: openvas-libraries-nasl
-Description: OpenVAS nasl libraries
-Version: @LIBOPENVASCONFIG_VERSION@
-Requires.private: glib-2.0 >= 2.16.0, gnutls >= 2.12
-Cflags: -I${includedir} -I${includedir}/openvas
-Libs: -L${libdir} -lopenvas_nasl
