@@ -1,3 +1,9 @@
+2017-02-13  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* libopenvas_nasl.pc.in: Removed. No longer requiered.
+
+	* COPYING: Delete entries related to nasl submodule.
+
 2017-02-13  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/network.c (open_stream_connection_ext): Define hostname variable
